--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Kenneth Wong",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.1",
     "express": "^4.16.3",
     "mongoose": "^5.2.18",
     "morgan": "^1.9.1"
